objects/CZOfficerDetails__c.object
<CustomObject>
    <description>Officer Details</description>
    <fields>
        <fullName>BrandCode__c</fullName>
        <description>Brand Code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Brand Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfficerName__c</fullName>
        <description>Officer Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Officer Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfficerNumber__c</fullName>
        <description>Officer Number</description>
        <label>Officer Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>OfficerDetails</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>OfficerDetails</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OfficerDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>